fixed some errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
         <div id="display"></div>
         <div class="buttons">
-          <button id="calculate" onclick="calculation()">Calulate</button>
+          <button id="calculate" onclick="calculation()">Calculate</button>
           <button id="clear" onclick="clears()">Clear</button>
         </div>
       </div>
